--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,29 +89,6 @@ ul {
   text-decoration: none;
 }
 
-@media(max-width: 767px) {
-  .active-menu-header span {
-    font-size: 1.85rem;
-    position: absolute;
-    padding-bottom: 0.5rem;
-    }
-  }
-
-.inactive-menu-header span {
-  color: var(--gray-300);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.25rem;
-  font-weight: bolder;
-}
-
-@media(max-width: 767px) {
-  .inactive-menu-header span {
-    font-size: 1.85rem;
-  }
-}
-
 .active-menu-header {
   display: flex;
   align-items: center;
@@ -121,12 +98,58 @@ ul {
   border-radius: 2px;
 }
 
-@media(max-width: 767px) {
+.active-menu-header::after {
+  content: '';
+  height: 5px;
+  border-radius: 3px 3px 0 0;
+  width: 80px;
+  position: absolute;
+  bottom: 0px;
+  background: #fff;
+}
+
+
+@media(max-width: 1023px) {
+  .active-menu-header span {
+    font-size: 1.85rem;
+    position: absolute;
+    padding-bottom: 0.5rem;
+  }
+}
+
+@media(max-width: 1023px) {
   .active-menu-header {
     display: flex;
     color: #fff;
     width: 250px;
     border-radius: 2px;
+  }
+}
+
+@media(max-width: 1023px) {
+  .active-menu-header::after {
+    content: '';
+    height: 5px;
+    border-radius: 3px 3px 0 0;
+    width: 80px;
+    position: relative;
+    bottom: -15px;
+    background: var(--green-500);
+  }
+}
+
+.inactive-menu-header span {
+  color: #bbb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.25rem;
+  font-weight: bolder;
+}
+
+@media(max-width: 1023px) {
+  .inactive-menu-header span {
+    font-size: 1.85rem;
   }
 }
 
@@ -138,44 +161,22 @@ ul {
   width: 80px;
   border-radius: 2px;
 }
-@media(max-width: 767px) {
+@media(max-width: 1023px) {
   .inactive-menu-header {
-  display: flex;
-  color: #fff;
-  width: 250px;
-  border-radius: 2px;
-}
-}
-
-
-.active-menu-header::after {
-  content: '';
-  height: 5px;
-  border-radius: 3px 3px 0 0;
-  width: 80px;
-  position: absolute;
-  bottom: 0px;
-  background: var(--green-500);
-}
-
-@media(max-width: 767px) {
-  .active-menu-header::after {
-    content: '';
-    height: 5px;
-    border-radius: 3px 3px 0 0;
-    width: 80px;
-    position: relative;
-    bottom: -15px;
-    background: var(--green-500);
+    display: flex;
+    color: #fff;
+    width: 250px;
+    border-radius: 2px;
   }
 }
+
 /************************** Menu ***********************/
 
 /************************** Menu-mobile ***********************/
-@media (max-width: 767px) {
-    .listItems {
-      display: none;
-    }
+@media (max-width: 1024px) {
+  .listItems {
+    display: none;
+  }
 
   .one,
   .two,
@@ -183,24 +184,14 @@ ul {
     background-color: #ffffff;
     height: 5px;
     width: 100%;
-    margin: 6px auto;
+    margin: 6px 0px 6px 0px;
     transition-duration: 0.3s;
-
   }
-    @media (max-width: 450px) {
-      .one,
-      .two,
-      .three {
-      height: 4px;
-      width: 100%;
-      margin: 7px auto;
-      }
-    }
 
   .menuToggle {
     width: 40px;
     height: 30px;
-    margin-right: 10px;
+    margin-right: 30px;
   }
 
   /*Fullscreen*/
@@ -213,7 +204,6 @@ ul {
     background: var(--gray-900);
     opacity: 0.95;
     z-index: 10;
-    /*camada acima, evitar o scrool dos itens a baixo*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -228,16 +218,31 @@ ul {
     right: 25px;
     top: 25px;
   }
+}
 
-    @media (max-width: 450px) {
-      .menuSectionOn .menuToggle {
-      right: 10px;
-      top: 15px;
-      }
-    }
+@media (max-width: 1024px) {
+  .one,
+  .two,
+  .three {
+    height: 3px;
+    width: 75%;
+    margin: 7px auto 7px auto;
+    transition-duration: 0.3s;
+  }
+
+  .menuToggle {
+    width: 40px;
+    height: 30px;
+    margin-right: 15px;
+  }
+  
+  .menuSectionOn .menuToggle {
+    right: 20px;
+    top: 20px;
+  }
 
   .menuSectionOn .menuToggle .one {
-    transform: rotate(45deg) translate(7px, 7px);
+    transform: rotate(45deg) translate(5px, 6px);
     background-color: #fff;
   }
 
@@ -250,7 +255,6 @@ ul {
     background-color: #fff;
   }
 }
-
 
 /************************** Menu-mobile ***********************/
 
@@ -294,7 +298,7 @@ ul {
   }
 }
 
-@media (min-width: 767px) {
+@media (min-width: 1023px) {
   .home-page-content {
     margin-top: 300px;
   }
@@ -304,4 +308,68 @@ ul {
   .home-page-content {
     margin-top: 250px;
   }
+}
+
+.mega-menu {
+  display: none;
+  left: 0;
+  position: absolute;
+  text-align: left;
+  width: 100%;
+}
+
+
+
+/* #hoverable Class Styles
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.hoverable {
+  position: static;
+}
+
+.hoverable > a:after {
+  content: "\25BC";
+  font-size: 10px;
+  padding-left: 6px;
+  position: relative;
+  top: -1px;
+}
+
+.hoverable:hover .mega-menu {
+  display: block;
+}
+
+
+/* #toggle Class Styles
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.toggleable > label:after {
+  content: "\25BC";
+  font-size: 10px;
+  padding-left: 6px;
+  position: relative;
+  top: -1px;
+}
+
+.toggle-input {
+  display: none;
+}
+.toggle-input:not(checked) ~ .mega-menu {
+  display: none;
+}
+
+.toggle-input:checked ~ .mega-menu {
+  display: block;
+}
+
+.toggle-input:checked + label {
+  color: white;
+  background: #2c5282; /*@apply bg-blue-800 */
+}
+
+.toggle-input:checked ~ label:after {
+  content: "\25B2";
+  font-size: 10px;
+  padding-left: 6px;
+  position: relative;
+  top: -1px;
 }
