Home - Menu Boxes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -137,7 +137,7 @@ ul {
     width: 80px;
     position: relative;
     bottom: -15px;
-    background: var(--green-500);
+    background: white;
   }
 }
 
